opam-version : "2.0"
name         : "tjr_mini_impfs"
version      : "0.0.1" 
synopsis     : "Description FIXME"

# ----------------------------------------------------------------------

maintainer  : "Tom Ridge <tom.j.ridge@googlemail.com>"
authors     : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage    : "https://github.com/tomjridge/???"
bug-reports : "https://github.com/tomjridge/???/issues"
dev-repo    : "git://github.com/tomjridge/???.git"

# ----------------------------------------------------------------------

depends: [
  "lru"
  "tjr_kv"
  "tjr_minifs"
]

# ----------------------------------------------------------------------

build: ["dune" "build" "-p" name "-j" jobs]
