(env
 (_ (flags (:standard 
             -open Base.Either 
             -open Tjr_monad 
             -open Tjr_fs_shared 
;             -open Tjr_path_resolution 
;             -open Tjr_net 
             -open Tjr_minifs 
;             -open Tjr_minifs.Minifs_intf 
             -open Tjr_impfs_v3_sqlite
             -open Tjr_impfs_v3
))))


(executables
 (names v3_main)
 (libraries tjr_impfs_v3 tjr_impfs_v3_sqlite))
