(env
 (_ (flags (:standard 
             -open Base.Either -open Tjr_monad -open Tjr_fs_shared 
             -open Tjr_plist
             -open Tjr_path_resolution -open Tjr_net -open Tjr_minifs 
             -open Tjr_minifs.Minifs_intf ))))


(library
  (public_name "tjr_impfs")
  (preprocess (pps ppx_deriving_yojson ppx_jane -allow-unannotated-ignores))
  (libraries ppx_jane ppx_deriving_yojson tjr_kv tjr_minifs tjr_plist lru sqlite3 bigstringaf extlib)
)

(include_subdirs unqualified)


