(env
 (_ (flags (:standard 
             -open Base.Either 
             -open Tjr_monad
             -open Tjr_fs_shared
))))


;;; NOTE this is a private library, usable by other tjr_impfs libs, but not externally
;;; visible
(library
 (name "tjr_impfs_v3_sqlite")
 (package tjr_impfs)
 (libraries base extlib sqlite3 tjr_monad tjr_fs_shared))


